tests/paczka1/fuzzy1/77325478.err
Error in line 6: fp9mLHluf A872 92,8
Error in line 11: S581 S875 41,9
Error in line 12: fp9mLHluf S875 96,9
Error in line 16: fp9mLHluf S581 20,4
Error in line 28: 3aJUFa A872 93,5
